# alglin

./: .gitignore  404.html  README.md  confetes.py  index.html  main.py  projeto-enigma.md  pyproject.toml  requirements.txt  sobre_2024s2.md  sobre_2025s1.md  sobre_2025s2.md  solucao_2024s2_AI.ipynb  solucao_translacao.ipynb  trabalho_final.md
Aula1/: 01-vetores.ipynb  particulas.ipynb  projeto-angry-birds.md
Aula2/: 02-sistemas_lineares.ipynb  commented_question.ipynb  demonstracao_transformadas_compostas.ipynb  projeto-enigma.md
Aula3/: 03-geometria_analitica.ipynb  10-tipos_de_transformadas.ipynb  notas_de_aula_coordenadas_homogeneas.md  projeto-camera-tempo-real.md
Aula4/: 04-bases.ipynb  projeto-projecao-3d.md
Aula5/: 05-autovetores_e_autovalores.ipynb  animacoes.ipynb  demonstracao_svd.md  projeto-desafio-netflix.md
Aula6/: 06-Bonus.ipynb  06-regressao_classificacao.ipynb  rubricas.ipynb
Aula7/: 07-compressao-parte1.ipynb  07-compressao-parte2.ipynb  projeto-forca.md
Material antigo/: 02-sistemas_lineares.ipynb  projeto-enigma.md
Slides/: aula01_parte01.md  aula01_parte02.md  aula02_parte01.md  aula02_parte02.md  aula02_parte03.md  aula03_parte01.md  aula03_parte02.md  aula04_parte01.md  aula04_parte02.md  aula05_parte01.md  aula06_parte01.md  aula06_parte02.md  engine.js
compressao_huffman/: index.html
compressao_sem_perdas_audio/: index.html
courseware/: mkdocs.yml
implementando_codigo_de_huffman/: index.html
notebooks/: 00-a_lua_da_lua.ipynb  01-vetores.ipynb  02-sistemas_lineares.ipynb  03-camera_demo.py  03-camera_demo_resolvido.py  (+11 more)
(+123 files in other folders)
