[project]
name = "alglin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autograd>=1.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
]
